gl_ext_api.h


typedef char GLbyte;

typedef double GLdouble;

typedef float GLclampf;

typedef float GLfloat;

typedef int GLint;

typedef int GLsizei;

typedef short GLshort;

typedef unsigned char GLboolean;

typedef unsigned char GLubyte;

typedef unsigned int GLenum;

typedef unsigned int GLsizei;

typedef unsigned int GLuint;

typedef unsigned short GLushort;

typedef void GLvoid;

void MultiTexCoord2sARB(GLenum, GLshort, GLshort);

void MultiTexCoord2svARB(GLenum, const GLshort *);

void MultiTexCoord3dARB(GLenum, GLdouble, GLdouble, GLdouble);

void MultiTexCoord3dvARB(GLenum, const GLdouble *);

void MultiTexCoord3fARB(GLenum, GLfloat, GLfloat, GLfloat);

void MultiTexCoord3fvARB(GLenum, const GLfloat *);

void MultiTexCoord3iARB(GLenum, GLint, GLint, GLint);

void MultiTexCoord3ivARB(GLenum, const GLint *);

void MultiTexCoord3sARB(GLenum, GLshort, GLshort, GLshort);

void MultiTexCoord3svARB(GLenum, const GLshort *);

void MultiTexCoord4dARB(GLenum, GLdouble, GLdouble, GLdouble, GLdouble);

void MultiTexCoord4dvARB(GLenum, const GLdouble *);

void MultiTexCoord4fARB(GLenum, GLfloat, GLfloat, GLfloat, GLfloat);

void MultiTexCoord4fvARB(GLenum, const GLfloat *);

void MultiTexCoord4iARB(GLenum, GLint, GLint, GLint, GLint);

void MultiTexCoord4ivARB(GLenum, const GLint *);

void MultiTexCoord4sARB(GLenum, GLshort, GLshort, GLshort, GLshort);

void MultiTexCoord4svARB(GLenum, const GLshort *);


void LoadTransposeMatrixfARB(const GLfloat *);

void LoadTransposeMatrixdARB(const GLdouble *);

void MultTransposeMatrixfARB(const GLfloat *);

void MultTransposeMatrixdARB(const GLdouble *);


void SampleCoverageARB(GLclampf, GLboolean);


void CompressedTexImage3DARB(GLenum, GLint, GLenum, GLsizei, GLsizei, GLsizei, GLint, GLsizei, const GLvoid *);

void CompressedTexImage2DARB(GLenum, GLint, GLenum, GLsizei, GLsizei, GLint, GLsizei, const GLvoid *);

void CompressedTexImage1DARB(GLenum, GLint, GLenum, GLsizei, GLint, GLsizei, const GLvoid *);

void CompressedTexSubImage3DARB(GLenum, GLint, GLint, GLint, GLint, GLsizei, GLsizei, GLsizei, GLenum, GLsizei, const GLvoid *);

void CompressedTexSubImage2DARB(GLenum, GLint, GLint, GLint, GLsizei, GLsizei, GLenum, GLsizei, const GLvoid *);

void CompressedTexSubImage1DARB(GLenum, GLint, GLint, GLsizei, GLenum, GLsizei, const GLvoid *);

void GetCompressedTexImageARB(GLenum, GLint, GLvoid *);


void PointParameterfARB(GLenum, GLfloat);

void PointParameterfvARB(GLenum, const GLfloat *);


void WeightbvARB(GLint, const GLbyte *);

void WeightsvARB(GLint, const GLshort *);

void WeightivARB(GLint, const GLint *);

void WeightfvARB(GLint, const GLfloat *);

void WeightdvARB(GLint, const GLdouble *);

void WeightubvARB(GLint, const GLubyte *);

void WeightusvARB(GLint, const GLushort *);

void WeightuivARB(GLint, const GLuint *);

void WeightPointerARB(GLint, GLenum, GLsizei, const GLvoid *);

void VertexBlendARB(GLint);


void CurrentPaletteMatrixARB(GLint);

void MatrixIndexubvARB(GLint, const GLubyte *);

void MatrixIndexusvARB(GLint, const GLushort *);

void MatrixIndexuivARB(GLint, const GLuint *);

void MatrixIndexPointerARB(GLint, GLenum, GLsizei, const GLvoid *);


void WindowPos2dARB(GLdouble, GLdouble);

void WindowPos2dvARB(const GLdouble *);

void WindowPos2fARB(GLfloat, GLfloat);

void WindowPos2fvARB(const GLfloat *);

void WindowPos2iARB(GLint, GLint);

void WindowPos2ivARB(const GLint *);

void WindowPos2sARB(GLshort, GLshort);

void WindowPos2svARB(const GLshort *);

void WindowPos3dARB(GLdouble, GLdouble, GLdouble);

void WindowPos3dvARB(const GLdouble *);

void WindowPos3fARB(GLfloat, GLfloat, GLfloat);

void WindowPos3fvARB(const GLfloat *);

void WindowPos3iARB(GLint, GLint, GLint);

void WindowPos3ivARB(const GLint *);

void WindowPos3sARB(GLshort, GLshort, GLshort);

void WindowPos3svARB(const GLshort *);


void VertexAttrib1dARB(GLuint, GLdouble);

void VertexAttrib1dvARB(GLuint, const GLdouble *);

void VertexAttrib1fARB(GLuint, GLfloat);

void VertexAttrib1fvARB(GLuint, const GLfloat *);

void VertexAttrib1sARB(GLuint, GLshort);

void VertexAttrib1svARB(GLuint, const GLshort *);

void VertexAttrib2dARB(GLuint, GLdouble, GLdouble);

void VertexAttrib2dvARB(GLuint, const GLdouble *);

void VertexAttrib2fARB(GLuint, GLfloat, GLfloat);

void VertexAttrib2fvARB(GLuint, const GLfloat *);

void VertexAttrib2sARB(GLuint, GLshort, GLshort);

void VertexAttrib2svARB(GLuint, const GLshort *);

void VertexAttrib3dARB(GLuint, GLdouble, GLdouble, GLdouble);

void VertexAttrib3dvARB(GLuint, const GLdouble *);

void VertexAttrib3fARB(GLuint, GLfloat, GLfloat, GLfloat);

void VertexAttrib3fvARB(GLuint, const GLfloat *);

void VertexAttrib3sARB(GLuint, GLshort, GLshort, GLshort);

void VertexAttrib3svARB(GLuint, const GLshort *);

void VertexAttrib4NbvARB(GLuint, const GLbyte *);

void VertexAttrib4NivARB(GLuint, const GLint *);

void VertexAttrib4NsvARB(GLuint, const GLshort *);

void VertexAttrib4NubARB(GLuint, GLubyte, GLubyte, GLubyte, GLubyte);

void VertexAttrib4NubvARB(GLuint, const GLubyte *);

void VertexAttrib4NuivARB(GLuint, const GLuint *);

void VertexAttrib4NusvARB(GLuint, const GLushort *);

void VertexAttrib4bvARB(GLuint, const GLbyte *);


void VertexAttrib1fARB(GLuint, GLfloat);

void VertexAttrib1sARB(GLuint, GLshort);

void VertexAttrib1dARB(GLuint, GLdouble);

void VertexAttrib2fARB(GLuint, GLfloat, GLfloat);

void VertexAttrib2sARB(GLuint, GLshort, GLshort);

void VertexAttrib2dARB(GLuint, GLdouble, GLdouble);

void VertexAttrib3fARB(GLuint, GLfloat, GLfloat, GLfloat);

void VertexAttrib3sARB(GLuint, GLshort, GLshort, GLshort);

void VertexAttrib3dARB(GLuint, GLdouble, GLdouble, GLdouble);

void VertexAttrib4NubARB(GLuint, GLubyte, GLubyte, GLubyte, GLubyte);

void VertexAttrib1fvARB(GLuint, const GLfloat *);

void VertexAttrib1svARB(GLuint, const GLshort *);

void VertexAttrib1dvARB(GLuint, const GLdouble *);

void VertexAttrib2fvARB(GLuint, const GLfloat *);

void VertexAttrib2svARB(GLuint, const GLshort *);

void VertexAttrib2dvARB(GLuint, const GLdouble *);

void VertexAttrib3fvARB(GLuint, const GLfloat *);

void VertexAttrib3svARB(GLuint, const GLshort *);

void VertexAttrib3dvARB(GLuint, const GLdouble *);

void VertexAttrib4bvARB(GLuint, const GLbyte *);

void VertexAttrib4NbvARB(GLuint, const GLbyte *);

void VertexAttrib4NsvARB(GLuint, const GLshort *);

void VertexAttrib4NivARB(GLuint, const GLint *);

void VertexAttrib4NubvARB(GLuint, const GLubyte *);

void VertexAttrib4NusvARB(GLuint, const GLushort *);

void VertexAttrib4NuivARB(GLuint, const GLuint *);