gl_ext_api.scm

    (define MultiTexCoord2sARB
      (foreign-lambda void "MultiTexCoord2sARB" unsigned-integer short short)))
  (begin
    (define MultiTexCoord2svARB
      (foreign-lambda void "MultiTexCoord2svARB" unsigned-integer s16vector)))
  (begin
    (define MultiTexCoord3dARB
      (foreign-lambda
        void
        "MultiTexCoord3dARB"
        unsigned-integer
        double
        double
        double)))
  (begin
    (define MultiTexCoord3dvARB
      (foreign-lambda void "MultiTexCoord3dvARB" unsigned-integer f64vector)))
  (begin
    (define MultiTexCoord3fARB
      (foreign-lambda
        void
        "MultiTexCoord3fARB"
        unsigned-integer
        float
        float
        float)))
  (begin
    (define MultiTexCoord3fvARB
      (foreign-lambda void "MultiTexCoord3fvARB" unsigned-integer f32vector)))
  (begin
    (define MultiTexCoord3iARB
      (foreign-lambda
        void
        "MultiTexCoord3iARB"
        unsigned-integer
        integer
        integer
        integer)))
  (begin
    (define MultiTexCoord3ivARB
      (foreign-lambda void "MultiTexCoord3ivARB" unsigned-integer s32vector)))
  (begin
    (define MultiTexCoord3sARB
      (foreign-lambda
        void
        "MultiTexCoord3sARB"
        unsigned-integer
        short
        short
        short)))
  (begin
    (define MultiTexCoord3svARB
      (foreign-lambda void "MultiTexCoord3svARB" unsigned-integer s16vector)))
  (begin
    (define MultiTexCoord4dARB
      (foreign-lambda
        void
        "MultiTexCoord4dARB"
        unsigned-integer
        double
        double
        double
        double)))
  (begin
    (define MultiTexCoord4dvARB
      (foreign-lambda void "MultiTexCoord4dvARB" unsigned-integer f64vector)))
  (begin
    (define MultiTexCoord4fARB
      (foreign-lambda
        void
        "MultiTexCoord4fARB"
        unsigned-integer
        float
        float
        float
        float)))
  (begin
    (define MultiTexCoord4fvARB
      (foreign-lambda void "MultiTexCoord4fvARB" unsigned-integer f32vector)))
  (begin
    (define MultiTexCoord4iARB
      (foreign-lambda
        void
        "MultiTexCoord4iARB"
        unsigned-integer
        integer
        integer
        integer
        integer)))
  (begin
    (define MultiTexCoord4ivARB
      (foreign-lambda void "MultiTexCoord4ivARB" unsigned-integer s32vector)))
  (begin
    (define MultiTexCoord4sARB
      (foreign-lambda
        void
        "MultiTexCoord4sARB"
        unsigned-integer
        short
        short
        short
        short)))
  (begin
    (define MultiTexCoord4svARB
      (foreign-lambda void "MultiTexCoord4svARB" unsigned-integer s16vector)))
  (begin
    (define LoadTransposeMatrixfARB
      (foreign-lambda void "LoadTransposeMatrixfARB" f32vector)))
  (begin
    (define LoadTransposeMatrixdARB
      (foreign-lambda void "LoadTransposeMatrixdARB" f64vector)))
  (begin
    (define MultTransposeMatrixfARB
      (foreign-lambda void "MultTransposeMatrixfARB" f32vector)))
  (begin
    (define MultTransposeMatrixdARB
      (foreign-lambda void "MultTransposeMatrixdARB" f64vector)))
  (begin
    (define SampleCoverageARB
      (foreign-lambda void "SampleCoverageARB" float unsigned-char)))
  (begin
    (define CompressedTexImage3DARB
      (foreign-lambda
        void
        "CompressedTexImage3DARB"
        unsigned-integer
        integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define CompressedTexImage2DARB
      (foreign-lambda
        void
        "CompressedTexImage2DARB"
        unsigned-integer
        integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define CompressedTexImage1DARB
      (foreign-lambda
        void
        "CompressedTexImage1DARB"
        unsigned-integer
        integer
        unsigned-integer
        unsigned-integer
        integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define CompressedTexSubImage3DARB
      (foreign-lambda
        void
        "CompressedTexSubImage3DARB"
        unsigned-integer
        integer
        integer
        integer
        integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define CompressedTexSubImage2DARB
      (foreign-lambda
        void
        "CompressedTexSubImage2DARB"
        unsigned-integer
        integer
        integer
        integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define CompressedTexSubImage1DARB
      (foreign-lambda
        void
        "CompressedTexSubImage1DARB"
        unsigned-integer
        integer
        integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define GetCompressedTexImageARB
      (foreign-lambda
        void
        "GetCompressedTexImageARB"
        unsigned-integer
        integer
        (c-pointer void))))
  (begin
    (define PointParameterfARB
      (foreign-lambda void "PointParameterfARB" unsigned-integer float)))
  (begin
    (define PointParameterfvARB
      (foreign-lambda void "PointParameterfvARB" unsigned-integer f32vector)))
  (begin
    (define WeightbvARB (foreign-lambda void "WeightbvARB" integer c-string)))
  (begin
    (define WeightsvARB (foreign-lambda void "WeightsvARB" integer s16vector)))
  (begin
    (define WeightivARB (foreign-lambda void "WeightivARB" integer s32vector)))
  (begin
    (define WeightfvARB (foreign-lambda void "WeightfvARB" integer f32vector)))
  (begin
    (define WeightdvARB (foreign-lambda void "WeightdvARB" integer f64vector)))
  (begin
    (define WeightubvARB
      (foreign-lambda void "WeightubvARB" integer u8vector)))
  (begin
    (define WeightusvARB
      (foreign-lambda void "WeightusvARB" integer u16vector)))
  (begin
    (define WeightuivARB
      (foreign-lambda void "WeightuivARB" integer u32vector)))
  (begin
    (define WeightPointerARB
      (foreign-lambda
        void
        "WeightPointerARB"
        integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define VertexBlendARB (foreign-lambda void "VertexBlendARB" integer)))
  (begin
    (define CurrentPaletteMatrixARB
      (foreign-lambda void "CurrentPaletteMatrixARB" integer)))
  (begin
    (define MatrixIndexubvARB
      (foreign-lambda void "MatrixIndexubvARB" integer u8vector)))
  (begin
    (define MatrixIndexusvARB
      (foreign-lambda void "MatrixIndexusvARB" integer u16vector)))
  (begin
    (define MatrixIndexuivARB
      (foreign-lambda void "MatrixIndexuivARB" integer u32vector)))
  (begin
    (define MatrixIndexPointerARB
      (foreign-lambda
        void
        "MatrixIndexPointerARB"
        integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define WindowPos2dARB
      (foreign-lambda void "WindowPos2dARB" double double)))
  (begin
    (define WindowPos2dvARB (foreign-lambda void "WindowPos2dvARB" f64vector)))
  (begin
    (define WindowPos2fARB (foreign-lambda void "WindowPos2fARB" float float)))
  (begin
    (define WindowPos2fvARB (foreign-lambda void "WindowPos2fvARB" f32vector)))
  (begin
    (define WindowPos2iARB
      (foreign-lambda void "WindowPos2iARB" integer integer)))
  (begin
    (define WindowPos2ivARB (foreign-lambda void "WindowPos2ivARB" s32vector)))
  (begin
    (define WindowPos2sARB (foreign-lambda void "WindowPos2sARB" short short)))
  (begin
    (define WindowPos2svARB (foreign-lambda void "WindowPos2svARB" s16vector)))
  (begin
    (define WindowPos3dARB
      (foreign-lambda void "WindowPos3dARB" double double double)))
  (begin
    (define WindowPos3dvARB (foreign-lambda void "WindowPos3dvARB" f64vector)))
  (begin
    (define WindowPos3fARB
      (foreign-lambda void "WindowPos3fARB" float float float)))
  (begin
    (define WindowPos3fvARB (foreign-lambda void "WindowPos3fvARB" f32vector)))
  (begin
    (define WindowPos3iARB
      (foreign-lambda void "WindowPos3iARB" integer integer integer)))
  (begin
    (define WindowPos3ivARB (foreign-lambda void "WindowPos3ivARB" s32vector)))
  (begin
    (define WindowPos3sARB
      (foreign-lambda void "WindowPos3sARB" short short short)))
  (begin
    (define WindowPos3svARB (foreign-lambda void "WindowPos3svARB" s16vector)))
  (begin
    (define VertexAttrib1dARB
      (foreign-lambda void "VertexAttrib1dARB" unsigned-integer double)))
  (begin
    (define VertexAttrib1dvARB
      (foreign-lambda void "VertexAttrib1dvARB" unsigned-integer f64vector)))
  (begin
    (define VertexAttrib1fARB
      (foreign-lambda void "VertexAttrib1fARB" unsigned-integer float)))
  (begin
    (define VertexAttrib1fvARB
      (foreign-lambda void "VertexAttrib1fvARB" unsigned-integer f32vector)))
  (begin
    (define VertexAttrib1sARB
      (foreign-lambda void "VertexAttrib1sARB" unsigned-integer short)))
  (begin
    (define VertexAttrib1svARB
      (foreign-lambda void "VertexAttrib1svARB" unsigned-integer s16vector)))
  (begin
    (define VertexAttrib2dARB
      (foreign-lambda
        void
        "VertexAttrib2dARB"
        unsigned-integer
        double
        double)))
  (begin
    (define VertexAttrib2dvARB
      (foreign-lambda void "VertexAttrib2dvARB" unsigned-integer f64vector)))
  (begin
    (define VertexAttrib2fARB
      (foreign-lambda void "VertexAttrib2fARB" unsigned-integer float float)))
  (begin
    (define VertexAttrib2fvARB
      (foreign-lambda void "VertexAttrib2fvARB" unsigned-integer f32vector)))
  (begin
    (define VertexAttrib2sARB
      (foreign-lambda void "VertexAttrib2sARB" unsigned-integer short short)))
  (begin
    (define VertexAttrib2svARB
      (foreign-lambda void "VertexAttrib2svARB" unsigned-integer s16vector)))
  (begin
    (define VertexAttrib3dARB
      (foreign-lambda
        void
        "VertexAttrib3dARB"
        unsigned-integer
        double
        double
        double)))
  (begin
    (define VertexAttrib3dvARB
      (foreign-lambda void "VertexAttrib3dvARB" unsigned-integer f64vector)))
  (begin
    (define VertexAttrib3fARB
      (foreign-lambda
        void
        "VertexAttrib3fARB"
        unsigned-integer
        float
        float
        float)))
  (begin
    (define VertexAttrib3fvARB
      (foreign-lambda void "VertexAttrib3fvARB" unsigned-integer f32vector)))
  (begin
    (define VertexAttrib3sARB
      (foreign-lambda
        void
        "VertexAttrib3sARB"
        unsigned-integer
        short
        short
        short)))
  (begin
    (define VertexAttrib3svARB
      (foreign-lambda void "VertexAttrib3svARB" unsigned-integer s16vector)))
  (begin
    (define VertexAttrib4NbvARB
      (foreign-lambda void "VertexAttrib4NbvARB" unsigned-integer c-string)))
  (begin
    (define VertexAttrib4NivARB
      (foreign-lambda void "VertexAttrib4NivARB" unsigned-integer s32vector)))
  (begin
    (define VertexAttrib4NsvARB
      (foreign-lambda void "VertexAttrib4NsvARB" unsigned-integer s16vector)))
  (begin
    (define VertexAttrib4NubARB
      (foreign-lambda
        void
        "VertexAttrib4NubARB"
        unsigned-integer
        unsigned-char
        unsigned-char
        unsigned-char
        unsigned-char)))
  (begin
    (define VertexAttrib4NubvARB
      (foreign-lambda void "VertexAttrib4NubvARB" unsigned-integer u8vector)))
  (begin
    (define VertexAttrib4NuivARB
      (foreign-lambda void "VertexAttrib4NuivARB" unsigned-integer u32vector)))
  (begin
    (define VertexAttrib4NusvARB
      (foreign-lambda void "VertexAttrib4NusvARB" unsigned-integer u16vector)))
  (begin
    (define VertexAttrib4bvARB
